--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         </div>
         <div class="slide">
             <div class="slide-box1 sl-box">
-                <div class="sl-img1"><img src="/doctors2.jpg" alt=""></div>
+                <div class="sl-img1"><img src="doctors2.jpg" alt=""></div>
                 <div class="sl-dfn"><h2>Sara williams</h2>
                 <h4>Designer</h4>
                 <p><i class="fa-solid fa-quote-left"></i>Export tempor illum tamen malis  irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.<i class="fa-solid fa-quote-right"></i></p>
@@ -317,7 +317,7 @@
             </div>
             <div class="slide-box2 sl-box">
                 <div class="sl-img2">
-                    <img src="/testimonials-4.jpg" alt="">
+                    <img src="testimonials-4.jpg" alt="">
                 </div>
                 <div class="sl-dfn">
                 <h2>Mat Brandon</h2>
