--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="left-box eye">Eye Care</div>
                     </div>
                     <div class="right1">
-                        <img src="/departments1.jpg" alt="" class="img">
+                        <img src="departments1.jpg" alt="" class="img">
                         <h2>Cardiology</h2>
                         <span class="ital">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</span>
                         <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
